fix overflow issue

--- a/src/pgk.sitetheme/pgk/sitetheme/resources/app/sass/components/_nav-bar.scss
+++ b/src/pgk.sitetheme/pgk/sitetheme/resources/app/sass/components/_nav-bar.scss
@@ -14,6 +14,7 @@
         background-color: #fff;
         box-shadow: 0 1rem 2rem rgba(0,0,0,0.25), 0 .65rem .65rem rgba(0,0,0,0.22);
         transition:right .5s linear;
+        overflow-y: scroll;
         @include media-breakpoint-up(md) {
             width: 50vw;
         }
@@ -45,7 +46,6 @@
     padding: 1rem;
     text-transform: uppercase;
     font-size: 1.25rem;
-    //display: none;
 }
 
 .app-nav-bar__toggle {
@@ -61,7 +61,6 @@
 }
 
 .app-nav__toggle {
-    // color: #fff;
     display: block;
     width: 3rem;
     &--close {
@@ -115,7 +114,6 @@
     right: -100%;
     @include media-breakpoint-up(lg) {
         right: 0;
-        //display: none;
     }
 }
 
@@ -130,13 +128,8 @@
     text-align: left;
     @include media-breakpoint-up(lg) {
         width: auto;
-        //flex: 1 0 0%;
-        //margin-right: 1rem;
         border: none;
         background: transparent;
-    }
-    @include media-breakpoint-up(xl) {
-        //margin-right: 1rem;
     }
     &--back-link {
         background-color: $gray-300;
@@ -171,23 +164,14 @@
         text-decoration: none;
         color: $app-primary !important;
     }
-    @include when-inside('.app-nav--level-1') {
-        &:after {
-            //display: none;
-        }
-    }
     @include media-breakpoint-up(lg) {
         color: #000;
         line-height: 1rem;
-        &:after {
-            //display: none;
-        }
     }
 }
 
 .app-nav__link--back-link {
     height: 3rem;
-    // margin-top: .5rem;
 }
 
 .app-nav__link--has-icon {
@@ -245,7 +229,6 @@
     height: calc(100vh - 60px);
     margin: 2rem 0 0;
     background-color: $white;
-    // box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
     box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
     transition:right .25s linear;
     @include media-breakpoint-up(lg) {
